[tool.poetry]
name = "django-ninja-api"
version = "0.1.0"
description = ""
authors = ["AnsonCar <anson1tsang@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "5.1"
django-cors-headers = "^4.5.0"
django-redis = "^5.4.0"
django-ninja = "^1.3.0"
django-ninja-jwt = "^5.3.4"
orjson = "^3.10.9"
uvicorn = "^0.32.0"
psycopg = { extras = ["binary"], version = "^3.2.3" }
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
